# orchid-mcp-template

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  WORK_CHECKLIST.md  docker-compose.yml  orchid-skills-commons  orchid_skills_commons_py  pyproject.toml  romy-skills  youtube-mcp
.github/workflows/: aqua-security.yml  ci.yml  codeql.yml  publish.yml  qodana_code_quality.yml
config/: appsettings.json  enabled_modules.json
docs/: template-capability-matrix.md  testing-improvement-plan.md
scripts/: setup_template.py
src/sackmesser/: __init__.py  main.py
src/sackmesser/adapters/: __init__.py  dependencies.py
src/sackmesser/adapters/api/: __init__.py  error_handler.py  main.py
src/sackmesser/adapters/mcp/: __init__.py  errors.py  server.py
src/sackmesser/application/: __init__.py  bus.py  errors.py
src/sackmesser/application/cache/: __init__.py  commands.py  dtos.py  handlers.py  queries.py
src/sackmesser/application/core/: __init__.py  dtos.py  handlers.py  queries.py  use_cases.py
src/sackmesser/application/cqrs/: __init__.py  bus.py  (+2 more)
src/sackmesser/domain/: __init__.py
src/sackmesser/infrastructure/: __init__.py
template/: module-manifest.json
tests/e2e/: test_api_core.py  test_setup_prune_smoke.py
tests/e2e/api/: test_core.py
tests/e2e/cli/: test_setup_prune_smoke.py
tests/integration/postgres/: test_postgres_integration.py
tests/integration/redis/: test_redis_integration.py
tests/unit/: test_main.py
tests/unit/core/: test_api_error_handler.py  test_api_routes_postgres.py  test_application_bus.py  test_core_use_cases.py  test_mcp_errors.py  test_mcp_server.py  test_mcp_tools_core.py  test_mcp_tools_registry.py  test_module_resolution.py  test_setup_template_script.py
tests/unit/postgres/: test_postgres_use_cases.py
tests/unit/redis/: test_redis_use_cases.py
tests/unit/scripts/: test_setup_template_script.py
(+91 files in other folders)
